# claude-slack-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: create_agent.py  notify-slack
src/claude_slack_bot/: __init__.py  config.py  main.py
src/claude_slack_bot/agent/: backend.py  claude_code.py  codex_cli.py  managed.py  messages.py  prompts.py  router.py  tools.py
src/claude_slack_bot/core/: coordinator.py  media.py  permissions.py
src/claude_slack_bot/db/: database.py  models.py  queries.py
src/claude_slack_bot/slack/: app.py  blocks.py  file_upload.py  listeners.py
src/claude_slack_bot/utils/: logging.py  rate_limit.py  watchdog.py
tests/: conftest.py  test_backend_router.py  test_blocks.py  test_claude_code_backend.py  test_codex_cli_backend.py  test_coordinator_polls.py  test_database.py  test_messages_backend.py  test_permissions.py
