[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "claude-slack-bot"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "anthropic>=0.52.0",
    "claude-code-sdk>=0.0.25",
    "slack-bolt>=1.20.0",
    "slack-sdk>=3.33.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
]

[tool.flit.module]
name = "claude_slack_bot"
path = "src/claude_slack_bot"

[tool.ruff]
line-length = 119
lint.select = [
    "ANN",
    "B",
    "E",
    "F",
    "I",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
lint.ignore = [
    "ANN204",
    "ANN401",
    "E501",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
]
lint.extend-select = ["E501"]
lint.exclude = ["*.ipynb"]
lint.per-file-ignores = {"src/claude_slack_bot/main.py" = ["PLC0415"]}

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
